--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -1,5 +1,5 @@
 .publications-section {
-  padding: 4rem 2rem;
+  padding: 7rem 2rem 4rem 2rem; /* Added top padding to clear fixed navbar */
   background-color: #0d0d0d;
   color: #f5f5f5;
   /* Added min-height to fill viewport and remove white space below */
